@@ -1,4 +1,5 @@
 3.2
+ - Fixed problems with binary-string handling.
 3.1
  - Shared libraries are now versioned by ABI: 3.1 instead of 3.1.0 etc.
  - Threading behaviour is now documented, and can be queried.
